--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,6 +13,7 @@
 .hero-text-span{
     padding: 10px;
     font-size: 20px;
+    padding-left: 25px;
     padding-right: 25px;
     font-style: italic;
     font-weight: bold;
